[package]
name = "dynomite"
description = "Embeddable distributed dynamo replication layer for Redis and Memcached"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }
quiche = { workspace = true, optional = true }
aes = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
rsa = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
nix = { workspace = true }
socket2 = { workspace = true }
httparse = { workspace = true }
prometheus = { workspace = true }

# Storage-substrate path dep declared so the resolver exercises
# the Noxu DB version graph today, before any Riak-protocol code
# lands. Gated behind the disabled-by-default `riak-storage`
# feature; nothing in the engine imports `noxu_db` yet. See
# docs/riak-compat-plan.md.
noxu-db = { workspace = true, optional = true }

[dev-dependencies]
hegeltest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
rcgen = { workspace = true }

[features]
default = ["tcp", "tls"]
tcp = []
quic = ["dep:quiche"]
tls = []
# Riak-compatible API + Noxu storage backend. Off by default;
# enabling it only forces the resolver to walk the noxu-db dep
# graph, validating that our crate-version pins are compatible.
# No source-level imports yet. See docs/riak-compat-plan.md.
riak-storage = ["dep:noxu-db"]
# Enables the macro (end-to-end with tc/netem) bench harness.
# Requires CAP_NET_ADMIN; see docs/book/src/operations/benchmarks.md.
bench-macro = []
# Enables the Stage 16 chaos / punishment / stress test
# (`tests/stage_16_chaos.rs`). The test compiles only when this
# feature is on so a default `cargo test` run does not pull in
# the heavy harness. The smoke 60-second variant runs in CI
# when CHAOS_DURATION_SECS=60 is set; the full 1-hour run is a
# manual pre-tag gate. See docs/book/src/operations/chaos.md.
chaos = []

[[bench]]
name = "parsers"
harness = false

[[bench]]
name = "mbuf"
harness = false

[[bench]]
name = "hashkit"
harness = false

[[bench]]
name = "tokens"
harness = false

[[bench]]
name = "dnode"
harness = false

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "quorum"
harness = false

[[bench]]
name = "macro_throughput"
harness = false
