[package]
name = "dynomited"
description = "Dynomite server binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
default-run = "dynomited"

[lints.rust]
# Inherit and override: the workspace declares `unsafe_code = "forbid"`,
# but `dynomited` needs `unsafe { fork() }` in [`daemonize`]. We drop
# the level to `deny` so the daemonize module can wrap that single
# unsafe block in a justified `#[allow(unsafe_code)]`. See
# `docs/journal/allowances.md`.
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

[lib]
name = "dynomited"
path = "src/lib.rs"

[[bin]]
name = "dynomited"
path = "src/main.rs"

[[bin]]
name = "gen-man"
path = "src/bin/gen-man.rs"
required-features = ["gen-man"]

[features]
default = []
# Build the optional `gen-man` binary that regenerates the
# `dynomited(8)` manpage. Off by default so the production build
# does not pull `clap_mangen` (and `roff`) into the dependency
# graph.
gen-man = ["dep:clap_mangen"]
# Enable the end-to-end integration test that spawns a real
# `redis-server` and drives the `dynomited` binary against it.
# The test discovers `redis-server` via `PATH`; when the binary
# is missing it marks itself ignored rather than failing. The
# feature gates only the test, no production code.
integration = []
# Forward the engine's QUIC transport feature so the conformance
# suite can exercise QUIC at the library level. Compiles in
# `quiche` plus its build-time dependencies.
quic = ["dynomite/quic"]

[dependencies]
dynomite = { path = "../dynomite" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
# Optional: only used by the `gen-man` binary. Enabled via the
# `gen-man` feature; production builds do not pay for it.
clap_mangen = { workspace = true, optional = true }

# Distributed tracing: the OTel SDK and OTLP exporter live in
# the binary because that is where the global subscriber is
# installed. Library code only uses `tracing` plus the
# `tracing-opentelemetry` adapter for context propagation.
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
thiserror = { workspace = true }
rcgen = { workspace = true }
