[package]
name = "dynomited"
description = "Dynomite server binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
default-run = "dynomited"

[lints.rust]
# Inherit and override: the workspace declares `unsafe_code = "forbid"`,
# but `dynomited` needs `unsafe { fork() }` in [`daemonize`]. We drop
# the level to `deny` so the daemonize module can wrap that single
# unsafe block in a justified `#[allow(unsafe_code)]`. See
# `docs/journal/allowances.md`.
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

[lib]
name = "dynomited"
path = "src/lib.rs"

[[bin]]
name = "dynomited"
path = "src/main.rs"

[[bin]]
name = "gen-man"
path = "src/bin/gen-man.rs"
required-features = ["gen-man"]

[features]
default = ["search"]
# Build the optional `gen-man` binary that regenerates the
# `dynomited(8)` manpage. Off by default so the production build
# does not pull `clap_mangen` (and `roff`) into the dependency
# graph.
gen-man = ["dep:clap_mangen"]
# Wire the `dynomite-search` crate into the dispatcher so the
# RediSearch FT.* command surface (FT.CREATE / FT.SEARCH /
# FT.INFO / FT.LIST / FT.DROPINDEX / FT.AGGREGATE / FT.EXPLAIN
# / FT.ALTER / FT.REGEX) is recognised and the HSET
# interception path mirrors writes into the in-process vector
# index registry. On by default; turning the feature off
# strips the search dependency tree out of the binary and
# leaves the dispatcher running with the cluster substrate
# alone.
search = ["dep:dynomite-search", "dyniak?/search"]
# Enable the end-to-end integration test that spawns a real
# `valkey-server` and drives the `dynomited` binary against it.
# The test discovers `valkey-server` via `PATH`; when the binary
# is missing it marks itself ignored rather than failing. The
# feature gates only the test, no production code.
integration = ["search"]
# Forward the engine's QUIC transport feature so the conformance
# suite can exercise QUIC at the library level. Compiles in
# `quiche` plus its build-time dependencies. The weak
# `dyniak?/quic` forward turns on the dyniak crate's QUIC PBC
# accept loop only when the `riak` feature has already pulled
# `dyniak` into the graph; `--features quic` alone does not drag
# in the Riak surface.
quic = ["dynomite/quic", "dyniak?/quic"]
# Enable the Riak protocol surface: PBC server, HTTP gateway,
# and (optional) active anti-entropy scheduler. Pulls in the
# `dyniak` crate. Off by default; turning the feature on
# does not change behaviour for operators who do not configure
# a `riak:` block in their YAML.
riak = ["dep:dyniak", "dyniak/noxu"]
# Enable Wasm phase fitting for the Riak MapReduce executor.
# When set, `dynomited` reads the `riak.wasm_modules:` YAML
# block at startup, loads each entry through
# `dyniak::mapreduce::wasm::load_modules_from_config`, and
# registers the resulting store with the executor. Implies
# `riak`. Pulls in `wasmtime` (and `ciborium`) via the
# `dyniak/wasm` feature.
wasm = ["riak", "dyniak/wasm"]

[dependencies]
dynomite = { path = "../dynomite", package = "dynomite-engine", version = "0.1.0" }
dynomite-search = { path = "../dynomite-search", version = "0.1.0", optional = true }
dyniak = { path = "../dyniak", optional = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
# Optional: only used by the `gen-man` binary. Enabled via the
# `gen-man` feature; production builds do not pay for it.
clap_mangen = { workspace = true, optional = true }

# Distributed tracing: the OTel SDK and OTLP exporter live in
# the binary because that is where the global subscriber is
# installed. Library code only uses `tracing` plus the
# `tracing-opentelemetry` adapter for context propagation.
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }

# TLS for outbound peer connections (the dnode supervisor wraps
# the connected `TcpStream` with a `tokio_rustls::TlsConnector`
# when the pool config carries a peer cert / key).
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }

# Prometheus is used to register the backend-reconnect counter
# emitted by the backend supervisor (see `metrics.rs`); `rand` is
# used to add uniform jitter to the supervisor's exponential
# reconnect backoff.
prometheus = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
thiserror = { workspace = true }
rcgen = { workspace = true }
