[package]
name = "dyntext"
description = "Trigram + bloom-filter text index for approximate-substring + (future) approximate-regex search."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = { workspace = true }
roaring = { version = "0.10", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
hegeltest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "index_throughput"
harness = false
