[package]
name = "dyntext"
description = "Trigram + bloom-filter text index for approximate-substring + (future) approximate-regex search."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable the `dyntext::persist` module, which serialises a
# `TextIndex` to an embedded Noxu DB environment so the
# trigram postings, per-doc bloom filters, and raw text
# survive a process restart. Off by default so the crate
# compiles cleanly without the `noxu` checkout next door,
# matching the pattern used by `dyniak::datastore::noxu`.
noxu = ["dep:noxu", "dep:bincode"]

[dependencies]
blake3 = { workspace = true }
# Phase 2 regex prefix-extraction. `regex-syntax` parses the
# pattern into an HIR without compiling a matcher; the actual
# match runs via `regex::bytes::Regex` until Phase 3 swaps in
# the TRE FFI for approximate-regex semantics.
regex = { workspace = true }
regex-syntax = "0.8"
roaring = { version = "0.10", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
noxu = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
tre-sys = { path = "../tre-sys", version = "0.0.1" }

[dev-dependencies]
hegeltest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "index_throughput"
harness = false

[[test]]
name = "persist_round_trip"
path = "tests/persist_round_trip.rs"
required-features = ["noxu"]
