[package]
name = "hashtree"
description = "Generic merkle/hashtree primitive for active anti-entropy and content-addressed comparison"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hegeltest = { workspace = true }

# Loom is wired in only under `RUSTFLAGS='--cfg loom'`. The
# default build is unaffected; the production lazy-init path
# uses `std::sync::OnceLock` from the standard library and
# pulls no extra dependencies. See `src/lazy_hash.rs` and
# `tests/loom.rs` for the model-checked alternative.
[target.'cfg(loom)'.dependencies]
loom = { workspace = true }
