[package]
name = "sup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OTP-style supervisor tree for tokio. Owns a set of supervised tasks, watches for panics or task exit, and restarts them per a configured strategy (one_for_one, rest_for_one, simple_one_for_one, one_for_all)."

[dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
