[package]
name = "tre-sys"
description = "Low-level FFI bindings to the TRE approximate-regex C library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
links = "tre"

# `unsafe_code` is workspace-forbidden by default. tre-sys is the
# single isolated location where unsafe is permitted, because
# every FFI declaration crosses the C ABI. The relaxation is
# scoped to this crate via `[lints]` and justified in the journal
# entry under docs/journal/2026-05-30-tre-sys-unsafe.md.
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

[features]
# `vendored` (default-on) compiles the bundled TRE source under
# vendor/tre/ via cc, so the crate works on hosts that do not
# ship libtre-dev. Users can disable this and pick up a system
# libtre via pkg-config by setting `default-features = false`.
default = ["vendored"]
vendored = []

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dependencies]
libc = "0.2"

[dev-dependencies]
